package Classes;

public class Bridge extends Location {
    private boolean isSleepingPlace;
    public Bridge() {
        super("Мост");
        this.isSleepingPlace = true;
    }
}
