package Classes;

public class Shiphold extends Location{
    private int capacity;
    public Shiphold() {
        super("Трюм корабля");
        this.capacity = 300;
    }
}
