package Classes;
import Interfaces.*;
public class Shorty extends Character implements CanCry, CanEat, CanClimb, CanSoothe {
    public Shorty(String name, String gender) {
        super(name, gender);
    }

}
